catkin_ws/logs/backend/build.make.678.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main(int, char**)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:271:51: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     for (int i = 0; i < frame.getKeypoints().size();i++)
                                                   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:287:32: error: no matching function for call to ‘RosHandler::updateCamPos(Eigen::Transform<double, 3, 1>::MatrixType&)’
    px4.updateCamPos(tm.matrix());
                                ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:287:32: note: candidate is:
In file included from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/Mapping.h:24:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:15:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:18:9: note: void RosHandler::updateCamPos(Eigen::Matrix4f&)
  void   updateCamPos (Matrix4f&); // to pixhawk 
         ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/include/RosHandler.h:18:9: note:   no known conversion for argument 1 from ‘Eigen::Transform<double, 3, 1>::MatrixType {aka Eigen::Matrix<double, 4, 4>}’ to ‘Eigen::Matrix4f& {aka Eigen::Matrix<float, 4, 4>&}’
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
